--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-spring/parallax": "^9.7.3",
     "@react-spring/web": "^9.7.3",
     "aos": "^2.3.4",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.0",
     "firebase": "^10.1.0",
     "framer-motion": "^10.13.0",
@@ -22,7 +23,8 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
-    "react-use-gesture": "^9.1.3"
+    "react-use-gesture": "^9.1.3",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
